--- a/frontend/src/pages/login/style.css
+++ b/frontend/src/pages/login/style.css
@@ -1,14 +1,11 @@
 /* Reset default margin and padding */
 
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: inter;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
-
 
 body {
     display: flex;
@@ -74,26 +71,25 @@ h2 {
     background-color: #0056b3;
 }
 
-.login-input{
+.login-input {
     margin-bottom: 20px;
     margin-top: 20px;
 }
-
 
 #login-input {
     border-radius: 8px;
     margin-bottom: 25px;
 }
 
-.input-group label{
+.input-group label {
     padding: 0;
 }
 
-.SignUp{
+.SignUp {
     display: flex;
     justify-content: space-between;
 }
 
-.SignUp a{
+.SignUp a {
     text-decoration: none;
 }
