Changed color to red

--- a/frontend/src/pages/login/style.css
+++ b/frontend/src/pages/login/style.css
@@ -59,7 +59,7 @@ h2 {
 .login-button {
     padding: 10px;
     width: 100%;
-    background-color: #81b622;
+    background-color: red;
     color: white;
     border: none;
     border-radius: 5px;
