--- a/frontend/src/pages/login/style.css
+++ b/frontend/src/pages/login/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: inter;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -59,7 +59,7 @@ h2 {
 .login-button {
     padding: 10px;
     width: 100%;
-    background-color: #007bff;
+    background-color: #81b622;
     color: white;
     border: none;
     border-radius: 5px;
