--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,7 +1,7 @@
 
 .navbar_logo{
-    width: 52px;
-    height: 52px;
+    width: 48px;
+    height: 48px;
 }
 
 .navbar{
@@ -10,7 +10,7 @@
     align-items: center;
     color: white;
     padding: 10px;
-
+    border-bottom: 1px solid #3b3939;
 }
 
 .right{
@@ -20,8 +20,20 @@
     gap: 15px;
 }
 
+.left{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left h1{
+    font-size: 24px;
+    padding-left: 4px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .navbar{
-    background-color: #0D1421;
+    background-color: #191724;
 }
 
 .inputField{
